# G4VM

./: .zenodo.json  README.md  gdml.xsd  zenodo.json
EPHIN/: ephin.gdml  ephin_chandra_shield.gdml  ephin_shield.gdml  ephin_soho_shield.gdml
EPHIN/aluminium/: aluminium_physvol.xml  aluminium_physvol.xml~  aluminium_solids.xml  aluminium_solids.xml~  aluminium_solids2.xml~  aluminium_structure.xml  aluminium_structure.xml~  aluminium_structure2.xml~
EPHIN/anticoincidence/: anticoincidence_physvol.xml  anticoincidence_solids.xml  anticoincidence_solids.xml~  anticoincidence_structure.xml  anticoincidence_structure.xml~
EPHIN/deadlayer/: deadlayer_physvol.xml  deadlayer_solids.xml  deadlayer_structure.xml
EPHIN/delrin/: delrin_physvol.xml  delrin_physvol.xml~  delrin_solids.xml  delrin_solids.xml~  delrin_structure.xml  delrin_structure.xml~
EPHIN/detector/: detector_physvol.xml  detector_physvol.xml~  detector_solids.xml  detector_solids.xml~  detector_structure.xml  detector_structure.xml~
EPHIN/detector_passive/: detector_passive_physvol.xml  detector_passive_solids.xml  detector_passive_solids.xml~  detector_passive_structure.xml  detector_physvol.xml~  detector_solids.xml~  detector_structure.xml~
EPHIN/foils/: foils_physvol.xml  foils_solids.xml  foils_solids.xml~  foils_structure.xml  foils_structure.xml~
EPHIN/materials/: materials.xml  materials.xml~
EPHIN/rtv/: rtv_physvol.xml  rtv_physvol.xml~  rtv_solids.xml  rtv_solids.xml~  rtv_structure.xml  rtv_structure.xml~
EPHIN/shield/: shield_materials.xml  shield_solids.xml  shield_structure.xml
EPHIN/shield_chandra/: shield_materials.xml  shield_physvol.xml  shield_solids.xml  shield_structure.xml
G4VM_build/: CMakeCache.txt  G4History.macro  Makefile  Spearhead_G4VM  cmake_install.cmake  run
G4VM_build/.qt/: QtDeploySupport.cmake
HET/: HET.gdml  HET_shield.gdml
HET/inc/: TrigonometricFunctions.gdml  colors.gdml  colors.gdml~  materials.gdml  materials.gdml~  materials_old.gdml  optical.gdml
HET/parts/: bgoandptfedefinition.gdml  bgoandptfevolume.gdml  hetadefinitions.gdml  hetasolids.gdml  hetbdefinitions.gdml  hetbsolids.gdml  pcbvolumes.gdml
KET/: definitions.xml  ket.gdml  materials.xml
Spearhead_G4VM/: CMakeLists.txt  LICENSE  main.cc
Spearhead_G4VM/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  UserActionInitialization.hh  sensi.hh
Spearhead_G4VM/run/: vis.mac
Spearhead_G4VM/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  UserActionInitialization.cc  sensi.cc
gdml_scheme/: gdml_solids.xsd
(+35 files in other folders)
